--- a/assets/index.html
+++ b/assets/index.html
@@ -102,7 +102,7 @@
                    <div class="home__data">
                         <h1 class="home__title"> Hello, I'm Gleison Mozart</h1>
                         <h3 class="home__subtitle">FullStack Developer</h3>
-                        <p class="home_description">High experience in development with java, springboot,
+                        <p class="home__description">High experience in development with java, springboot,
                            javascript, pl/sql, angular.js html5, css, producing quality work. 
                         </p>
                         <a href="#contact" class="button button--flex">
@@ -113,7 +113,7 @@
                  <div class="home__scroll">
                    <a href="#about" class="home__scroll-button button--flex">
                     <i class="uil uil-mouse-alt home__scroll-mouse"></i> 
-                    <span class="home__scroll--name">Scroll down</span>
+                    <span class="home__scroll-name">Scroll down</span>
                     <i class="uil uil-arrow-down home__scroll-arrow"></i>
                    </a>
                  </div>
