--- a/assets/index.html
+++ b/assets/index.html
@@ -106,7 +106,7 @@
                            javascript, pl/sql, angular.js html5, css, producing quality work. 
                         </p>
                         <a href="#contact" class="button button--flex">
-                          Contact Me<i class="uil uil-message button__icon"></i>
+                          Contact Me <i class="uil uil-message button__icon"></i>
                         </a>
                    </div>
                  </div>
@@ -119,6 +119,8 @@
                  </div>
               </div>
           </section>
+
+          <!--=============== ABOUT ================-->
 
 
 
