--- a/assets/index.html
+++ b/assets/index.html
@@ -121,7 +121,43 @@
           </section>
 
           <!--=============== ABOUT ================-->
+          <section class="about section" id="about">
+            <h2 class="section__title">About Me</h2>
+            <span class="section__subtitle">My introduction</span>
 
+            <div class="about__container container grid">
+             <img src="" alt="assets/" class="about__img"> 
+
+             <div class="about__data">
+               <p class="about__description">Full Stack Developer, with extensive 
+                 knowledge and years of, working in web technologies 
+                 and Java, Spring boot, AngularJS, delivering quality work. </p>
+
+                 <div class="about__info">
+                   <div> 
+                    <span class="about__info-title">+3</span>
+                    <span class="about__info-name">Years <br> experience </span>
+                   </div>
+
+                   <div> 
+                    <span class="about__info-title">10+</span>
+                    <span class="about__info-name">Completed <br> personal projects</span>
+                   </div>
+
+                   <div> 
+                    <span class="about__info-title">+1</span>
+                    <span class="about__info-name">Companies <br> worked </span>
+                   </div>
+                 </div>
+
+                 <div class="about__buttons">
+                   <a download="" href="assets/pdf/" class="button button--flex">
+                     Download CV<i class="uil uil-download-alt button__icon"></i>
+                   </a>
+                 </div>
+             </div>
+            </div>
+          </section>
 
 
     </main>
