--- a/assets/index.html
+++ b/assets/index.html
@@ -159,6 +159,8 @@
             </div>
           </section>
 
+          <!--==============================  SKILLS ===================================-->
+
 
     </main>
 
