--- a/assets/index.html
+++ b/assets/index.html
@@ -167,7 +167,7 @@
         <div class="skills__container container grid">
           <div>
             <!--================ SKILLS 1 ================-->
-            <div class="skills__content">
+            <div class="skills__content skills__open">
               <div class="skills__header">
                 <i class="uil uil-brackets-curly skills__icon"></i>
 
@@ -233,7 +233,7 @@
               </div>
             </div>
             <!--================ SKILLS 2 ================-->
-            <div class="skills__content">
+            <div class="skills__content skills__close">
               <div class="skills__header">
                 <i class="uil uil-server-network skills__icon"></i>
 
