Qualification tag in development

--- a/assets/index.html
+++ b/assets/index.html
@@ -318,11 +318,33 @@
               <span class="qualifications__subtitle">Estacio - University</span>
               <div class="qualification__calendar">
                 <i class="uil uil-calendar-alt"></i>
+                2016.2 - 2021.2
               </div>
             </div>
-          </div>
+
+               <div>
+                    <span class="qualification__rounder"></span>
+                    <span class="qualification__line"></span> 
+               </div>
+            </div>
+        <!--==============================  QUALIFICATION 2 ===================================-->  
+            <div class="qualification__data">
+              <h3 class="qualification__title">Java Academy</h3>
+              <span class="qualifications__subtitle">Fuctura Tecnologia - Advanced Computing School</span>
+              <div class="qualification__calendar">
+                <i class="uil uil-calendar-alt"></i>
+                2019.1 - 2019.2
+              </div>
+            </div>
+
+               <div>
+                    <span class="qualification__rounder"></span>
+                    <span class="qualification__line"></span> 
+               </div>
+            </div>
          </div>
        </div>
+    
       </section>
 
     </main>
